Updates to bibliography, and example of a citation downloaded from journal website in .bib format for import

--- a/Phase1Bibliography.bib
+++ b/Phase1Bibliography.bib
@@ -703,6 +703,49 @@
   revised         = {2018-12-02},
 }
 
+@Article{Pinto2018,
+  author    = {Rogério M. Pinto and Anya Y. Spector and Susan S. Witte and Prema Filippone and C. Jean Choi and Melanie Wall},
+  journal   = {Social Work in Public Health},
+  title     = {Training in Evidence-Based Practices Increases Likelihood to Integrate Different HIV Prevention Services with Substance-Using Clients},
+  year      = {2018},
+  note      = {PMID: 29488860},
+  number    = {3},
+  pages     = {202-214},
+  volume    = {33},
+  abstract  = {ABSTRACTProviders of social and public health services (“providers”) often use HIV prevention strategies with substance-using clients to decrease HIV transmission and infection. This article examines factors that facilitate providers’ use of select HIV-prevention strategies. Sample comprises 379 providers from 36 agencies in New York City. Outcomes: sexual risk assessments; risk reduction counseling; condom demonstration; and referrals to HIV testing. Predictors: training; job satisfaction; staff collaboration. The authors used multilevel logistic regression and linear multilevel models. HIV prevention training was associated with increased performance of each outcome. The odds of conducting several outcomes were higher for providers trained in evidence-based interventions. Staff collaboration and job satisfaction were associated with provision of multiple outcomes. This study shows training and collaboration/satisfaction as significantly influencing providers to use prevention strategies. Providers ought to be trained in multiple modalities, and agencies ought to prioritize collaborative environments that promote job satisfaction.},
+  doi       = {10.1080/19371918.2018.1438326},
+  eprint    = {https://doi.org/10.1080/19371918.2018.1438326},
+  publisher = {Routledge},
+  url       = {https://doi.org/10.1080/19371918.2018.1438326},
+}
+
+@Article{Adams2012,
+  author          = {Adams, Julie L. and Almond, Maria L. G. and Ringo, Edward J. and Shangali, Wahida H. and Sikkema, Kathleen J.},
+  journal         = {International journal of psychiatry in medicine},
+  title           = {Feasibility of nurse-led antidepressant medication management of depression in an HIV clinic in Tanzania.},
+  year            = {2012},
+  issn            = {0091-2174},
+  pages           = {105--117},
+  volume          = {43},
+  abstract        = {Sub-Saharan Africa has the highest HIV prevalence worldwide and depression is highly prevalent among those infected. The negative impact of depression on HIV outcomes highlights the need to identify and treat it in this population. A model for doing this in lower-resourced settings involves task-shifting depression treatment to primary care; however, HIV-infected individuals are often treated in a parallel HIV specialty setting. We adapted a model of task-shifting, measurement-based care (MBC), for an HIV clinic setting and tested its feasibility in Tanzania. MBC involves measuring depressive symptoms at meaningful intervals and adjusting antidepressant medication treatment based on the measure of illness. Twenty adults presenting for care at an outpatient HIV clinic in Tanzania were enrolled and followed by a nurse care manager who measured depressive symptoms at baseline and every 4 weeks for 12 weeks. An algorithm-based decision-support tool was utilized by the care manager to recommend individualized antidepressant medication doses to participants' HIV providers at each visit. Retention was high and fidelity of the care manager to the MBC protocol was exceptional. Follow through of antidepressant prescription dosing recommendations by the prescriber was low. Limited availability of antidepressants was also noted. Despite challenges, baseline depression scores decreased over the 12-week period. Overall, the model of algorithm-based nursing support of prescription decisions was feasible. Future studies should address implementation issues of medication supply and dosing. Further task-shifting to relatively more abundant and lower-skilled health workers, such as nurses' aides, warrants examination.},
+  chemicals       = {Anti-Retroviral Agents, Antidepressive Agents, Tricyclic, Amitriptyline},
+  citation-subset = {IM},
+  completed       = {2012-08-30},
+  country         = {United States},
+  doi             = {10.2190/PM.43.2.a},
+  issn-linking    = {0091-2174},
+  issue           = {2},
+  keywords        = {Adult; Ambulatory Care Facilities; Amitriptyline, administration & dosage; Anti-Retroviral Agents, administration & dosage; Antidepressive Agents, Tricyclic, administration & dosage; Comorbidity; Depressive Disorder, diagnosis, drug therapy, epidemiology; Disease Management; Feasibility Studies; Female; Follow-Up Studies; HIV; HIV Infections, diagnosis, drug therapy, epidemiology; Humans; Male; Nurses, organization & administration; Primary Health Care, organization & administration; Tanzania; Treatment Outcome},
+  mid             = {NIHMS489518},
+  nlm-id          = {0365646},
+  owner           = {NLM},
+  pmc             = {PMC3731063},
+  pmid            = {22849034},
+  pubmodel        = {Print},
+  pubstate        = {ppublish},
+  revised         = {2018-11-13},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
