--- a/Phase1Bibliography.bib
+++ b/Phase1Bibliography.bib
@@ -650,6 +650,28 @@
   revised         = {2019-12-10},
 }
 
+@Article{Saitz2010,
+  author    = {Saitz, Richard and Alford, Daniel P and Bernstein, Judith and Cheng, Debbie M and Samet, Jeffrey and Palfai, Tibor},
+  journal   = {Journal of addiction medicine},
+  title     = {Screening and brief intervention for unhealthy drug use in primary care settings: randomized clinical trials are needed},
+  year      = {2010},
+  number    = {3},
+  pages     = {123},
+  volume    = {4},
+  publisher = {NIH Public Access},
+}
+
+@Article{Graham2016,
+  author    = {Graham, Lucy J and Davis, Amy L and Cook, Paul F and Weber, Mary},
+  journal   = {AIDS care},
+  title     = {Screening, Brief Intervention, and Referral to Treatment in a rural Ryan white part C HIV clinic},
+  year      = {2016},
+  number    = {4},
+  pages     = {508--512},
+  volume    = {28},
+  publisher = {Taylor \& Francis},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
