Sex Now Survey Addition

--- a/Phase1Bibliography.bib
+++ b/Phase1Bibliography.bib
@@ -1969,6 +1969,13 @@
   revised         = {2020-04-16},
 }
 
+@Article{Trussler2015,
+  author = {Terry Trussler and David Ham},
+  title  = {Sex Now 2015 Montreal Toronto Vancouver},
+  year   = {2015},
+  eprint = {https://www.cbrc.net/sex_now_2015_montreal_toronto_vancouver},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
