--- a/Phase1Bibliography.bib
+++ b/Phase1Bibliography.bib
@@ -1976,6 +1976,89 @@
   eprint = {https://www.cbrc.net/sex_now_2015_montreal_toronto_vancouver},
 }
 
+@Article{Noseworthy2014,
+  author          = {Noseworthy, Ann Marie and Sevigny, Elizabeth and Laizner, Andrea M. and Houle, Claudine and La Riccia, Pina},
+  journal         = {Archives of psychiatric nursing},
+  title           = {Mental health care professionals' experiences with the discharge planning process and transitioning patients attending outpatient clinics into community care.},
+  year            = {2014},
+  issn            = {1532-8228},
+  month           = aug,
+  pages           = {263--271},
+  volume          = {28},
+  abstract        = {Health care reform promotes delivery of mental health care in the community. Outpatient mental healthcare professionals (HCPs) are pressured to discharge patients. This study's purpose: to understand the experience and perceptions of mental HCPs with discharge planning and transitioning patients into community care. Twelve HCPs participated in semi-structured qualitative interviews. Three main categories: engaging in the discharge planning process, making the transition smooth, and guiding values emerged. A conceptual framework was created to explain the phenomenon. HCPs valued strengthening partnerships and building relationships to ensure smooth transition. Sufficient resources and trust imperative for safe patient discharge.},
+  citation-subset = {IM, N},
+  completed       = {2016-02-11},
+  country         = {United States},
+  doi             = {10.1016/j.apnu.2014.05.002},
+  issn-linking    = {0883-9417},
+  issue           = {4},
+  keywords        = {Adult; Community Mental Health Services; Cooperative Behavior; Female; Humans; Interdisciplinary Communication; Mental Disorders, nursing, psychology; Middle Aged; Mood Disorders, nursing, psychology; Outpatient Clinics, Hospital; Patient Discharge; Patient Transfer; Psychiatric Nursing; Psychotic Disorders, nursing, psychology; Qualitative Research; Quebec},
+  nlm-id          = {8708534},
+  owner           = {NLM},
+  pii             = {S0883-9417(14)00065-X},
+  pmid            = {25017560},
+  pubmodel        = {Print-Electronic},
+  pubstate        = {ppublish},
+  revised         = {2014-07-14},
+}
+
+@Article{Bergmans2019,
+  author          = {Bergmans, Yvonne and Ninkovic, Danijela and Sunderji, Nadiya and Simpson-Barrette, Darlene},
+  journal         = {Journal of psychosocial nursing and mental health services},
+  title           = {Client Evaluation of an Interprofessional Urgent Mental Health Care Program.},
+  year            = {2019},
+  issn            = {0279-3695},
+  month           = mar,
+  pages           = {17--24},
+  volume          = {57},
+  abstract        = {Urgent psychiatric care programs are hospital- or community-based outpatient services that expedite access to mental health care for high-risk individuals, yet these services are rarely evaluated from the perspectives of clients. A qualitative thematic analysis of 13 participant interviews of a psychiatric urgent care program allowed researchers to address this gap. Communication, responsiveness, and continuous availability were identified as critical in helping clients articulate their perceived self-stigma, needs, and preferences. A well-coordinated interprofessional team proactively reaching out to facilitate client engagement in care was noted as helpful. Successful transitions to ongoing care partially mitigated the frustration of a time-limited program. Researchers found that an interprofessional team enabled timely and ongoing contact, assistance with system navigation, and the ability to meet a broader range of urgent client needs, including addressing social determinants of health. Recommendations to improve the service included extended hours, improved access to psychotherapy, and integrated telephone crisis support. [Journal of Psychosocial Nursing and Mental Health Services, 57(3), 17-24.].},
+  citation-subset = {IM, N},
+  completed       = {2019-04-09},
+  country         = {United States},
+  doi             = {10.3928/02793695-20181019-01},
+  issn-linking    = {0279-3695},
+  issue           = {3},
+  keywords        = {Communication; Female; Humans; Male; Mental Disorders, therapy; Mental Health Services; Patient Care Team; Patient Preference, psychology; Program Evaluation; Psychiatric Nursing; Qualitative Research; Surveys and Questionnaires},
+  nlm-id          = {8200911},
+  owner           = {NLM},
+  pmid            = {30376584},
+  pubmodel        = {Print-Electronic},
+  pubstate        = {ppublish},
+  revised         = {2019-12-10},
+}
+
+@Article{Kinnair2014,
+  author  = {Kinnair, D., Anderson, E., van Diepen, H., &Poyser, C},
+  journal = {Advances in Psychiatric Treatment},
+  title   = {Interprofessional education in mental health services: Learning together for better team working},
+  year    = {2014},
+}
+
+@Article{Coates2018,
+  author          = {Coates, Dominiek},
+  journal         = {Journal of psychosocial nursing and mental health services},
+  title           = {Service Models for Urgent and Emergency Psychiatric Care: An Overview.},
+  year            = {2018},
+  issn            = {0279-3695},
+  month           = aug,
+  pages           = {23--30},
+  volume          = {56},
+  abstract        = {There is variation in the way mental health services respond to urgent and emergency presentations, with few evidence-based models reported in the literature, and no agreed on best practice models. To inform the development of urgent and emergency psychiatric care models, a literature review was performed. The review sought to identify strengths and critiques of varying models, evidence gaps, and areas for future research. After review, significant variation was found in the design and scope of urgent and emergency care models. Most models are either community or hospital based, with few integrated models that span community and hospital care. The development of integrated models has the potential to reduce service duplication and support a shift toward provision of least restrictive care. The overall evidence base of urgent and emergency care models is limited, with few studies in the area, and there is a need for further research. [Journal of Psychosocial Nursing and Mental Health Services, 56(8), 23-30.].},
+  citation-subset = {IM, N},
+  completed       = {2018-11-05},
+  country         = {United States},
+  doi             = {10.3928/02793695-20180212-01},
+  issn-linking    = {0279-3695},
+  issue           = {8},
+  keywords        = {Delivery of Health Care, Integrated, standards; Emergency Service, Hospital; Emergency Services, Psychiatric, standards; Humans; Psychiatric Nursing},
+  nlm-id          = {8200911},
+  owner           = {NLM},
+  pmid            = {29447412},
+  pubmodel        = {Print-Electronic},
+  pubstate        = {ppublish},
+  revised         = {2018-11-05},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
