--- a/Phase1Bibliography.bib
+++ b/Phase1Bibliography.bib
@@ -2092,6 +2092,33 @@
   revised         = {2020-04-08},
 }
 
+@Article{McMain2018,
+  author          = {McMain, Shelley F. and Chapman, Alexander L. and Kuo, Janice R. and Guimond, Tim and Streiner, David L. and Dixon-Gordon, Katherine L. and Isaranuwatchai, Wanrudee and Hoch, Jeffrey S.},
+  journal         = {BMC psychiatry},
+  title           = {The effectiveness of 6 versus 12-months of dialectical behaviour therapy for borderline personality disorder: the feasibility of a shorter treatment and evaluating responses (FASTER) trial protocol.},
+  year            = {2018},
+  issn            = {1471-244X},
+  month           = jul,
+  pages           = {230},
+  volume          = {18},
+  abstract        = {Although Dialectical Behaviour Therapy (DBT) is an evidence-based psychosocial treatment for borderline personality disorder (BPD), the demand for it exceeds available resources. The commonly researched 12-month version of DBT is lengthy; this can pose a barrier to its adoption in many health care settings. Further, there are no data on the optimal length of psychotherapy for BPD. The aim of this study is to examine the clinical and cost-effectiveness of 6 versus 12 months of DBT for chronically suicidal individuals with BPD. A second aim of this study is to determine which patients are as likely to benefit from shorter treatment as from longer treatment. Powered for non-inferiority testing, this two-site single-blind trial involves the random assignment of 240 patients diagnosed with BPD to 6 or 12 months of standard DBT. The primary outcome is the frequency of suicidal or non-suicidal self-injurious episodes. Secondary outcomes include healthcare utilization, psychiatric and emotional symptoms, general and social functioning, and health status. Cost-effectiveness outcomes will include the cost of providing each treatment as well as health care and societal costs (e.g., missed work days and lost productivity). Assessments are scheduled at pretreatment and at 3-month intervals until 24 months. This is the first study to directly examine the dose-effect of psychotherapy for chronically suicidal individuals diagnosed with BPD. Examining both clinical and cost effectiveness in 6 versus 12 months of DBT will produce answers to the question of how much treatment is good enough. Information from this study will help to guide decisions about the allocation of scarce treatment resources and recommendations about the benefits of briefer treatment. NCT02387736 . Registered February 20, 2015.},
+  citation-subset = {IM},
+  completed       = {2019-06-25},
+  country         = {England},
+  doi             = {10.1186/s12888-018-1802-z},
+  issn-linking    = {1471-244X},
+  issue           = {1},
+  keywords        = {Adult; Borderline Personality Disorder, economics, psychology, therapy; Cost-Benefit Analysis, methods; Dialectical Behavior Therapy, economics, methods; Feasibility Studies; Female; Humans; Prospective Studies; Single-Blind Method; Suicidal Ideation; Time Factors; Treatment Outcome; Borderline personality disorder; Dialectical behaviour therapy; Randomized controlled trials; Self-injury; Suicide},
+  nlm-id          = {100968559},
+  owner           = {NLM},
+  pii             = {10.1186/s12888-018-1802-z},
+  pmc             = {PMC6050694},
+  pmid            = {30016935},
+  pubmodel        = {Electronic},
+  pubstate        = {epublish},
+  revised         = {2019-06-25},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
