updating to include books referenced (Chisolm and Galanter)

--- a/Phase1Bibliography.bib
+++ b/Phase1Bibliography.bib
@@ -2119,6 +2119,16 @@
   revised         = {2019-06-25},
 }
 
+@Book{Galanter2011,
+  author    = {Galanter, M. and Kleber, H.D.},
+  publisher = {American Psychiatric Pub.},
+  title     = {Psychotherapy for the Treatment of Substance Abuse},
+  year      = {2011},
+  isbn      = {9781585623907},
+  lccn      = {2010021471},
+  url       = {https://books.google.ca/books?id=NEWpRlwUAmcC},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
